# FinRobot

./: .coverage  .coverage.server_internal_lgcorzo.pid756720.XdYyEqMx.HNQIp837rWOh  .gitignore  Dockerfile  OAI_CONFIG_LIST  README.md  agent_builder_demo.py  coverage_final.txt  coverage_final_12.txt  coverage_final_3.txt  coverage_report_final.txt  coverage_report_final_final.txt  coverage_summary.txt  invoke.yaml  pyproject.toml
.github/workflows/: check.yml  docs-to-wiki.yml  publish.yml
configs/: save_config_forecaster.json
docs/: architecture.md
documentation/: devops_plan_migration_agentframework.md  finrobot_capabilities_improvements.md  finrobot_financial_capabilities.md  finrobot_llmops_integration.md
experiments/: multi_factor_agents.py  portfolio_optimization.py
finrobot/functional/: coding.py  quantitative.py
k8s/base/: configmap.yaml  deployment.yaml  sealed-secret.yaml
mlruns/0/: meta.yaml
mlruns/520510575244730533/: meta.yaml
src/finrobot/: __main__.py  scripts.py  settings.py  toolkits.py
src/finrobot/agents/: entities.py  workflow.py
src/finrobot/agents/services/: workflow_service.py
src/finrobot/agents/tools/: __init__.py
src/finrobot/analysis/services/: __init__.py
src/finrobot/application/: __init__.py
src/finrobot/application/jobs/: __init__.py  analysis.py  base.py
src/finrobot/application/reporting/: __init__.py  entities.py
src/finrobot/application/reporting/services/: __init__.py  pdf_service.py
src/finrobot/application/reporting/templates/: __init__.py
src/finrobot/core/: schemas.py
src/finrobot/data_access/data_source/: __init__.py  finance_data.py  finnhub_utils.py  finnlp_utils.py  fmp_utils.py  reddit_utils.py  sec_utils.py  yfinance_utils.py
src/finrobot/data_access/data_source/domains/: __init__.py
src/finrobot/data_access/data_source/earnings_calls_src/: __init__.py  earningsData.py  main_earningsData.py
src/finrobot/data_access/data_source/filings_src/: __init__.py  secData.py  sec_filings.py
src/finrobot/data_access/data_source/marker_sec_src/: __init__.py  pdf_to_md.py  pdf_to_md_parallel.py  sec_filings_to_pdf.py
src/finrobot/data_source/: __init__.py  finnhub_utils.py  finnlp_utils.py  fmp_utils.py  reddit_utils.py  sec_utils.py  yfinance_utils.py
src/finrobot/data_source/domains/: __init__.py
src/finrobot/data_source/domains/market_data/: finnhub_adapter.py  yfinance_adapter.py
src/finrobot/data_source/domains/news/: entities.py  finnhub_adapter.py  repositories.py
src/finrobot/evaluation/analysis/: __init__.py  entities.py
src/finrobot/functional/: __init__.py  analyzer.py  charting.py  coding.py  quantitative.py  rag.py  ragquery.py  reportlab.py
src/finrobot/infrastructure/: __init__.py
src/finrobot/infrastructure/adapters/: mlflow_adapter.py
src/finrobot/infrastructure/io/: files.py  osvariables.py
src/finrobot/infrastructure/messaging/: kafka_app.py
src/finrobot/infrastructure/services/: alert_service.py  logger_service.py  mlflow_service.py
src/finrobot/infrastructure/utils/: __init__.py
src/finrobot/io/: __init__.py  files.py
src/finrobot/jobs/: __init__.py  analysis.py
src/finrobot/models/: schemas.py
src/finrobot/models/agents/: agent_library.py  entities.py  utils.py  workflow.py
src/finrobot/tools/: __init__.py
src/finrobot/utils/: __init__.py
tasks/: checks.py  commits.py  docs.py  formats.py  installs.py  mlflow.py  projects.py
tests/: conftest.py  test_toolkits.py
tests/agents/: test_library.py  test_prompts.py  test_utils.py
tests/application/integration/: test_workflow.py
tests/application/jobs/: test_analysis.py  test_base_job.py
tests/application/reporting/: test_entities.py
tests/application/reporting/services/: test_pdf_service.py
tests/core/: test_general_utils.py  test_schemas.py  test_scripts.py
tests/data_access/: test_finance_data.py  test_finnhub_utils.py  test_finnlp_utils.py  test_fmp_utils.py  test_reddit_utils.py  test_sec_utils.py  test_yfinance_utils.py
tests/data_access/data_source/: test_fmp_extra.py  test_sec_filings_extra.py
tests/data_access/data_source/earnings_calls_src/: test_earnings_logic.py  test_main_earningsData.py
tests/data_access/data_source/filings_src/: test_filings_logic.py  test_secData.py  test_sec_filings.py
tests/data_access/data_source/marker_sec_src/: test_marker_all.py  test_pdf_to_md_parallel.py  test_sec_filings_logic.py  test_sec_filings_to_pdf.py
tests/evaluation/: test_analyzer_service.py
tests/functional/: test_analyzer.py  test_charting.py  test_coding.py  test_quantitative.py  test_rag.py  test_ragquery.py  test_reportlab.py  test_text.py
tests/infrastructure/core/: test_general_utils.py  test_schemas.py  test_scripts.py  test_settings.py
tests/infrastructure/functional/: test_charting.py
tests/infrastructure/io/: test_configs.py  test_files.py  test_osvariables.py
tests/infrastructure/messaging/: test_kafka_app.py
tests/infrastructure/services/: test_alert_service.py  test_logger_service.py  test_mlflow_service.py
tests/infrastructure/tools/: test_tools.py
tests/integration/: test_workflow.py
tests/jobs/: test_analysis.py
tests/models/: test_schemas.py
tests/models/agents/: test_agent_workflow.py  test_library.py  test_prompts.py  test_registry.py  test_services.py  test_single_assistant.py  test_utils.py  test_workflow_expanded.py  test_workflow_service_expanded.py
tests/tools/: test_tools.py
tutorials_advanced/: agent_annual_report.ipynb  agent_trade_strategist.ipynb  lmm_agent_mplfinance.ipynb  lmm_agent_opt_smacross.ipynb  main.ipynb
tutorials_beginner/: agent_annual_report.ipynb
wiki/: Agents_stories.md  Analysis_stories.md  Architecture.md  Charting_stories.md  FMP_stories.md  Finnhub_stories.md  Home.md  Jobs_stories.md  Kafka_stories.md  OSvariables_stories.md  Quantitative_stories.md  RAG_stories.md  Reddit_stories.md  Reporting_stories.md  SAR.md  SEC_stories.md  SRS.md  Services_stories.md  Settings_stories.md  Tools_stories.md  Workflows_stories.md  YFinance_stories.md  backlog_finrobot.md
(+43 files in other folders)
