[tool.poetry]
name = "finrobot"
version = "0.1.0"
description = "Financial Analyst Agent using Microsoft Agent Framework"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "finrobot", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
# Core framework
agent-framework-core = { git = "https://github.com/microsoft/agent-framework.git", subdirectory = "python/packages/core" }
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
loguru = "^0.7.2"

# Data processing
pandas = "^2.2.2"
pyarrow = "^15.0.2"
omegaconf = "^2.3.0"

# Financial data sources
yfinance = "*"
finnhub-python = "*"
sec-api = "^1.0.32"
tushare = "^1.4.24"

# Visualization
mplfinance = "*"
reportlab = "^4.4.9"

# Infrastructure
mlflow = "3.5.0"
boto3 = "^1.42.24"
confluent-kafka = "^2.8.2"

# OpenTelemetry
opentelemetry-instrumentation = ">=0.51b0"
opentelemetry-exporter-otlp-proto-http = ">=1.30.0"
opentelemetry-exporter-otlp = ">=1.30.0"

# Utilities
html2text = "^2025.4.15"
langdetect = "^1.0.9"
praw = "^7.8.1"

[tool.poetry.group.checks.dependencies]
bandit = "^1.7.9"
coverage = "^7.5.4"
mypy = "^1.10.1"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.25.3"
ruff = "^0.4.0"
types-requests = "^2.32.0"
pandas-stubs = "^2.2.0"
types-tqdm = "^4.66.0"
pandera = "^0.28.1"

[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"

# Optional heavy dependencies (GPU-related)
[tool.poetry.group.gpu.dependencies]
chromadb = "^1.4.1"
sentence-transformers = "^5.2.0"
langchain = "^1.2.4"
autogenstudio = "^0.4.1.11"
litellm = "^1.60.8"
backtrader = "^1.9.78.123"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disable_error_code = [
    "misc",
    "import-untyped",
    "name-defined",
    "attr-defined",
    "union-attr",
    "call-overload",
    "arg-type",
    "assignment",
    "operator",
    "index",
    "return-value",
    "var-annotated",
    "override",
    "call-arg",
    "str-format",
    "truthy-function",
    "return",
    "used-before-def",
]

[tool.ruff]
line-length = 120
extend-exclude = ["__pycache__", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "E402", "E722", "E731", "F401", "F403", "F405", "F841", "W291", "W293"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B113", "B311"]
